[RAP-4089: fixed layout issue of search box cutting off the bottom of character q g p y]

--- a/app_storefront_core/cartridge/scss/default/header/_header.scss
+++ b/app_storefront_core/cartridge/scss/default/header/_header.scss
@@ -57,6 +57,7 @@
 		width: calc(100% - 2.5rem);
 		@media screen and (min-width: 768px) {
 			height: 1.75rem;
+			padding: 0 1rem;
 		}
 	}
 	button {
